Thu Sep 27 18:00:00 CEST 2007 Singular-3-0-3-1
Changes with respect to 3-0-3:

- SAGE patches (for building libsingular) integrated
- flex/bison generated files integrated: these files will only
  be regenerated if removed;
  a normal build will no longer need bison and flex, but configure still
  tests for them.
- gftables changed to tables based on Conway polynomials
  (see factory/ConwayList.txt) and more tables created
  (for all fields of char p < 255 with < 2^16 elements)
- multivariate GCD (in char 0, no extension) improved
  by a modular method: selected by On(SW_USE_CHINREM_GCD), on by default
- modgen has no longer a builtin path:
  change SINGULARROOT in the generated Makefile if you dislike the default

----------------------------------------------------------
Tue Oct 16 18:58:18 CEST 2007 Singular-3-0-3-2
Changes with respect to 3-0-3-1:

- bison generated file integrated also for factory
- modgen: target clean will no longer remove bison generated files
          fixes wrt. %return
- gcd in algebraic extensions: remove content wrt. K(alpha), not only wrt. K
- EZGCD: special case is handled by CHINREM_GCD
- heuristic for gcd in char 0: 1) EZGCD 2) CHINREM_GCD 3) Prem
- NTL: update to version 5.4.1
- doc/general.doc: description of algorithms updated
- omalloc: areas may overlap: use memmove instead of memcpy
---------------------------------------------------------

Wed Oct 31 18:57:21 CET 2007 Singular-3-0-4-beta
Changes with respect to 3-0-3-2
- more modgen fixes
- Weyl, Exterior, findimAlgebra, nc_algebra do not change the current ring but
  return the new structure
- ncalgebra is now depreciated, use the new command nc_algebra
- libraries changes to use nc_algebra