@@ -1,7 +1,7 @@
 /****************************************
 *  Computer Algebra System SINGULAR     *
 ****************************************/
-/* $Id: kstd1.cc,v 1.27 2007-11-06 16:30:19 Singular Exp $ */
+/* $Id: kstd1.cc,v 1.28 2007-11-06 17:55:57 Singular Exp $ */
 /*
 * ABSTRACT:
 */
@@ -1152,6 +1152,7 @@ ideal mora (ideal F, ideal Q,intvec *w,intvec *hilb,kStrategy strat)
     {
       if (pWeight(i)!=1) { currRing->weight_all_1=FALSE; break; }
     }
+    if ((currRing->weight_all_1==0) && TEST_OPT_PROT) PrintS("not all weights are 1\n");
   }
   initBuchMoraCrit(strat);
   initHilbCrit(F,Q,&hilb,strat);
